--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="team">Team</string>
     <string name="hero">Hero</string>
+    <string name="save_hero">Save Hero</string>
+    <string name="kaydet">KAYDET</string>
 </resources>
